[package]
name = "basementdb"
version = "0.1.0"
authors = ["Matthew Pfeiffer <spferical@gmail.com>", "Srinivas Kaza <kaza@mit.edu>"]

[dependencies]
tarpc = "0.9.0"
tarpc-plugins = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
config = "0.8"
sodiumoxide = "0.0.16"
tokio-core = "0.1.6"
futures = "0.1.11"
