[package]
name = "basementdb"
version = "0.1.0"
authors = ["Matthew Pfeiffer <spferical@gmail.com>", "Srinivas Kaza <kaza@mit.edu>"]

[dependencies]
bincode = "1.0.0"
data-encoding = "2.1.1"
serde = "1.0"
serde_derive = "1.0"
config = "0.8"
sodiumoxide = "0.0.16"
bufstream = "0.1"
scoped_threadpool = "0.1.9"
chrono = "0.4"
rand = "0.4.2"

[lib]
doctest = false
